# i-wanna-draw

./: Cargo.toml
src/: art.rs  gif.rs  main.rs
