[package]
name = "i-wanna-draw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i-wanna-build =  { git = "https://github.com/FluffyProtogen/i-wanna-build.git"}
image = "0.24.7"
colors-transform = "0.2.11"
gif = "0.12.0"